-converted the excel files to xlsx files -joined all the xlsx files into one file using pandas -removed the unnecessary columns

--- a/SalesEDA.ipynb
+++ b/SalesEDA.ipynb
@@ -15,14 +15,373 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Replace 'file_path' with the path to your file\n",
+    "df = pd.read_excel('datasets\\\\Sales\\\\AMB.xlsx')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>PRODUCT CODE</th>\n",
+       "      <th>DESCRIPTION</th>\n",
+       "      <th>QTY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>02/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3810</th>\n",
+       "      <td>15/06/2023</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3811</th>\n",
+       "      <td>03/11/2023</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3812</th>\n",
+       "      <td>04/11/2023</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3813</th>\n",
+       "      <td>04/11/2023</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3814</th>\n",
+       "      <td>04/11/2023</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3815 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            DATE  PRODUCT CODE               DESCRIPTION  QTY\n",
+       "0     02/01/2022         12978  AMBEWELA SET YOGURT 80ML    6\n",
+       "1     01/01/2022         12978  AMBEWELA SET YOGURT 80ML    6\n",
+       "2     01/01/2022         12978  AMBEWELA SET YOGURT 80ML    1\n",
+       "3     01/01/2022         12978  AMBEWELA SET YOGURT 80ML    6\n",
+       "4     02/01/2022         12978  AMBEWELA SET YOGURT 80ML   10\n",
+       "...          ...           ...                       ...  ...\n",
+       "3810  15/06/2023         12978  AMBEWELA SET YOGURT 80ML    5\n",
+       "3811  03/11/2023         12978  AMBEWELA SET YOGURT 80ML   10\n",
+       "3812  04/11/2023         12978  AMBEWELA SET YOGURT 80ML   10\n",
+       "3813  04/11/2023         12978  AMBEWELA SET YOGURT 80ML   24\n",
+       "3814  04/11/2023         12978  AMBEWELA SET YOGURT 80ML    3\n",
+       "\n",
+       "[3815 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Directory where the Excel files are located\n",
+    "directory = 'datasets\\\\Sales'\n",
+    "\n",
+    "# List to store the dataframes\n",
+    "dfs = []\n",
+    "\n",
+    "# Iterate over each file in the directory\n",
+    "for filename in os.listdir(directory):\n",
+    "    if filename.endswith(\".xlsx\") or filename.endswith(\".xls\"):\n",
+    "        # Construct the full file path\n",
+    "        file_path = os.path.join(directory, filename)\n",
+    "        \n",
+    "        # Read the Excel file\n",
+    "        df = pd.read_excel(file_path)\n",
+    "        \n",
+    "        # Select the required columns\n",
+    "        df = df[['DATE', 'PRODUCT CODE', 'DESCRIPTION', 'QTY']]\n",
+    "        \n",
+    "        # Append the dataframe to the list\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "# Concatenate all dataframes\n",
+    "final_df = pd.concat(dfs, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>PRODUCT CODE</th>\n",
+       "      <th>DESCRIPTION</th>\n",
+       "      <th>QTY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>02/01/2022</td>\n",
+       "      <td>12978</td>\n",
+       "      <td>AMBEWELA SET YOGURT 80ML</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34627</th>\n",
+       "      <td>09/10/2023</td>\n",
+       "      <td>10415</td>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34628</th>\n",
+       "      <td>09/10/2023</td>\n",
+       "      <td>10415</td>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34629</th>\n",
+       "      <td>09/10/2023</td>\n",
+       "      <td>10415</td>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34630</th>\n",
+       "      <td>09/10/2023</td>\n",
+       "      <td>10415</td>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34631</th>\n",
+       "      <td>09/10/2023</td>\n",
+       "      <td>10415</td>\n",
+       "      <td>HIGHLAND YOGHURT 80ML</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34632 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             DATE  PRODUCT CODE               DESCRIPTION   QTY\n",
+       "0      02/01/2022         12978  AMBEWELA SET YOGURT 80ML   6.0\n",
+       "1      01/01/2022         12978  AMBEWELA SET YOGURT 80ML   6.0\n",
+       "2      01/01/2022         12978  AMBEWELA SET YOGURT 80ML   1.0\n",
+       "3      01/01/2022         12978  AMBEWELA SET YOGURT 80ML   6.0\n",
+       "4      02/01/2022         12978  AMBEWELA SET YOGURT 80ML  10.0\n",
+       "...           ...           ...                       ...   ...\n",
+       "34627  09/10/2023         10415     HIGHLAND YOGHURT 80ML  12.0\n",
+       "34628  09/10/2023         10415     HIGHLAND YOGHURT 80ML   9.0\n",
+       "34629  09/10/2023         10415     HIGHLAND YOGHURT 80ML  13.0\n",
+       "34630  09/10/2023         10415     HIGHLAND YOGHURT 80ML   7.0\n",
+       "34631  09/10/2023         10415     HIGHLAND YOGHURT 80ML   5.0\n",
+       "\n",
+       "[34632 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
