--- a/GBP_ARIMA.ipynb
+++ b/GBP_ARIMA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('DATA\\\\GBP.csv', parse_dates=['Date'], index_col='Date')\n",
+    "df = pd.read_csv('GBP.csv', parse_dates=['Date'], index_col='Date')\n",
     "\n",
     "# Display the first few rows of the DataFrame\n",
     "#print(df.head())\n",
@@ -95,6 +95,7 @@
     "plt.ylabel('Price')\n",
     "plt.legend()\n",
     "plt.show()\n",
+    "\n",
     "\n",
     "# Determine order (p, d, q) for ARIMA model based on ACF and PACF plots\n",
     "# For simplicity, let's assume you've already determined the order as (1, 1, 1)\n",
