fixed week of year column

--- a/SalesEDA.ipynb
+++ b/SalesEDA.ipynb
@@ -3064,6 +3064,261 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Product Quantity</th>\n",
+       "      <th>Units sold</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>DayType</th>\n",
+       "      <th>Rainfall</th>\n",
+       "      <th>Week_of_Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>0.060849</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>0.000801</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>0.000801</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>0.000801</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>0.060849</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34519</th>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34520</th>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34521</th>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34522</th>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34523</th>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34524 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date          Product Name Product Quantity  Units sold  Day  \\\n",
+       "0     2022-01-02  AMBEWELA SET YOGHURT             80ML           6    2   \n",
+       "1     2022-01-01  AMBEWELA SET YOGHURT             80ML           6    1   \n",
+       "2     2022-01-01  AMBEWELA SET YOGHURT             80ML           1    1   \n",
+       "3     2022-01-01  AMBEWELA SET YOGHURT             80ML           6    1   \n",
+       "4     2022-01-02  AMBEWELA SET YOGHURT             80ML          10    2   \n",
+       "...          ...                   ...              ...         ...  ...   \n",
+       "34519 2023-10-09      HIGHLAND YOGHURT             80ML          12    9   \n",
+       "34520 2023-10-09      HIGHLAND YOGHURT             80ML           9    9   \n",
+       "34521 2023-10-09      HIGHLAND YOGHURT             80ML          13    9   \n",
+       "34522 2023-10-09      HIGHLAND YOGHURT             80ML           7    9   \n",
+       "34523 2023-10-09      HIGHLAND YOGHURT             80ML           5    9   \n",
+       "\n",
+       "       Month  Year DayOfWeek Category  DayType  Rainfall  Week_of_Year  \n",
+       "0          1  2022    Sunday  YOGHURT  Weekend  0.060849            52  \n",
+       "1          1  2022  Saturday  YOGHURT  Weekend  0.000801            52  \n",
+       "2          1  2022  Saturday  YOGHURT  Weekend  0.000801            52  \n",
+       "3          1  2022  Saturday  YOGHURT  Weekend  0.000801            52  \n",
+       "4          1  2022    Sunday  YOGHURT  Weekend  0.060849            52  \n",
+       "...      ...   ...       ...      ...      ...       ...           ...  \n",
+       "34519     10  2023    Monday  YOGHURT  Weekday       NaN            41  \n",
+       "34520     10  2023    Monday  YOGHURT  Weekday       NaN            41  \n",
+       "34521     10  2023    Monday  YOGHURT  Weekday       NaN            41  \n",
+       "34522     10  2023    Monday  YOGHURT  Weekday       NaN            41  \n",
+       "34523     10  2023    Monday  YOGHURT  Weekday       NaN            41  \n",
+       "\n",
+       "[34524 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assuming df is your DataFrame and it has a column 'Date'\n",
+    "# Assuming sales_df is your DataFrame and it has a column 'Date'\n",
+    "sales_df['Date'] = pd.to_datetime(sales_df['Date'])\n",
+    "sales_df['Week_of_Year'] = sales_df['Date'].dt.isocalendar().week\n",
+    "\n",
+    "sales_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
