Added ID column to make it easy to access the records

--- a/Sales Prediction using XG boost.ipynb
+++ b/Sales Prediction using XG boost.ipynb
@@ -1164,6 +1164,301 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>Regression</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generate ID to make records unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_df[\"Id\"]=range(1, len(sales_df) + 1)\n",
+    "sales_df=sales_df[['Id','Date', 'Product Name', 'Product Quantity', 'Units sold', 'Day',\n",
+    "    'Month', 'Year', 'DayOfWeek', 'Category', 'DayType', 'Week_of_Year',\n",
+    "    'Rainfall']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explore the new dataset and split the categories into columns. then predict using Random forrest regressor and XGboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Product Quantity</th>\n",
+       "      <th>Units sold</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>DayType</th>\n",
+       "      <th>Week_of_Year</th>\n",
+       "      <th>Rainfall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>52</td>\n",
+       "      <td>7.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>AMBEWELA SET YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>52</td>\n",
+       "      <td>7.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34154</th>\n",
+       "      <td>34155</td>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34155</th>\n",
+       "      <td>34156</td>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34156</th>\n",
+       "      <td>34157</td>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34157</th>\n",
+       "      <td>34158</td>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34158</th>\n",
+       "      <td>34159</td>\n",
+       "      <td>2023-10-09</td>\n",
+       "      <td>HIGHLAND YOGHURT</td>\n",
+       "      <td>80ML</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YOGHURT</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34159 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Id        Date          Product Name Product Quantity  Units sold  \\\n",
+       "0          1  2022-01-02  AMBEWELA SET YOGHURT             80ML           6   \n",
+       "1          2  2022-01-01  AMBEWELA SET YOGHURT             80ML           6   \n",
+       "2          3  2022-01-01  AMBEWELA SET YOGHURT             80ML           1   \n",
+       "3          4  2022-01-01  AMBEWELA SET YOGHURT             80ML           6   \n",
+       "4          5  2022-01-02  AMBEWELA SET YOGHURT             80ML          10   \n",
+       "...      ...         ...                   ...              ...         ...   \n",
+       "34154  34155  2023-10-09      HIGHLAND YOGHURT             80ML          12   \n",
+       "34155  34156  2023-10-09      HIGHLAND YOGHURT             80ML           9   \n",
+       "34156  34157  2023-10-09      HIGHLAND YOGHURT             80ML          13   \n",
+       "34157  34158  2023-10-09      HIGHLAND YOGHURT             80ML           7   \n",
+       "34158  34159  2023-10-09      HIGHLAND YOGHURT             80ML           5   \n",
+       "\n",
+       "       Day  Month  Year DayOfWeek Category  DayType  Week_of_Year  Rainfall  \n",
+       "0        2      1  2022    Sunday  YOGHURT  Weekend            52       7.6  \n",
+       "1        1      1  2022  Saturday  YOGHURT  Weekend            52       0.1  \n",
+       "2        1      1  2022  Saturday  YOGHURT  Weekend            52       0.1  \n",
+       "3        1      1  2022  Saturday  YOGHURT  Weekend            52       0.1  \n",
+       "4        2      1  2022    Sunday  YOGHURT  Weekend            52       7.6  \n",
+       "...    ...    ...   ...       ...      ...      ...           ...       ...  \n",
+       "34154    9     10  2023    Monday  YOGHURT  Weekday            41       0.0  \n",
+       "34155    9     10  2023    Monday  YOGHURT  Weekday            41       0.0  \n",
+       "34156    9     10  2023    Monday  YOGHURT  Weekday            41       0.0  \n",
+       "34157    9     10  2023    Monday  YOGHURT  Weekday            41       0.0  \n",
+       "34158    9     10  2023    Monday  YOGHURT  Weekday            41       0.0  \n",
+       "\n",
+       "[34159 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
